--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main-sections">
       <section class="main-hero">
         <div class="container">
-          <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="hero">Эффективные решения<br> для вашего бизнеса</br></h1>
           <button type="button" class="hero-button" data-modal-open>
             <span class="hero-button-name">Заказать услугу</span>
           </button>
@@ -63,9 +63,9 @@
             <b class="modal-title">Оставьте свои данные, мы вам перезвоним</b>
             <form action="#">
               <div class="form-field">
-                <label for="name" class="form-lable">Имя</label>
+                <label for="ename" class="form-lable">Имя</label>
                 <div class="form-input">
-                  <input class="field-input" type="text" name="name" id="name" />
+                  <input class="field-input" type="text" name="name" id="ename" />
                   <svg class="form-icons">
                     <use href="./images/symbol-defs.svg#icon-person-black"></use>
                   </svg>
