--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <main class="main-sections">
       <section class="main-hero">
         <div class="container">
-          <h1 class="hero">Эффективные решения<br> для вашего бизнеса</br></h1>
+          <h1 class="hero">Эффективные решения<br />для вашего бизнеса</h1>
           <button type="button" class="hero-button" data-modal-open>
             <span class="hero-button-name">Заказать услугу</span>
           </button>
@@ -167,7 +167,7 @@
           <ul class="doing-list">
             <li class="doing-link">
               <img
-                srcset="./images/doing-img1@1x.jpg, ./images/doing-img1@2x.jpg"
+                srcset="./images/doing-img1@1x.jpg 1x, ./images/doing-img1@2x.jpg 2x"
                 src="./doing-img1@1x.jpg"
                 alt="десктопные приложения"
                 width="370"
@@ -176,7 +176,7 @@
             </li>
             <li class="doing-link">
               <img
-                srcset="./images/doing-img2@1x.jpg, ./images/doing-img2@2x.jpg"
+                srcset="./images/doing-img2@1x.jpg 1x, ./images/doing-img2@2x.jpg 2x"
                 src="./images/doing-img2@1x.jpg"
                 alt="мобильные приложения"
                 width="370"
@@ -185,7 +185,7 @@
             </li>
             <li class="doing-link">
               <img
-                srcset="./images/doing-img3@1x.jpg, ./images/doing-img3@1x.jpg"
+                srcset="./images/doing-img3@1x.jpg 1x, ./images/doing-img3@2x.jpg 2x"
                 src="./images/doing-img3@1x.jpg"
                 alt="дизайнерские решения"
                 width="370"
@@ -204,16 +204,16 @@
                 <source
                   srcset="./images/demianenko-desctop-opt@1x.jpg 1x, ./images/demianenko-desctop-opt@2x.jpg 2x"
                   media="(min-width:1200px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
-                <source srcset=" ./images/demianenko-tablet-opt@1x.jpg 1x, ./images/demianenko-tablet-opt@1x.jpg 2x"
-                media="(min-width:768px)" sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
-                type="image/
+                <source
+                  srcset="./images/demianenko-tablet-opt@1x.jpg 1x, ./images/demianenko-tablet-opt@1x.jpg 2x"
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
                 <source
                   srcset="./images/demianenko-mobile-opt@1x.jpg 1x, ./images/demianenko-mobile-opt@2x.jpg 2x"
                   media="(max-width:767px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
                 <img src="./images/demianenko-mobile-opt@1x.jpg" alt="Фото сотрудника" />
@@ -258,18 +258,16 @@
                 <source
                   srcset="./images/repina-desctop-opt@1x.jpg 1x, ./images/repina-desctop-opt@2x.jpg 2x"
                   media="(min-width:1200px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
                 <source
                   srcset="./images/repina-tablet-opt@1x.jpg 1x, ./images/repina-tablet-opt@2x.jpg 2x"
                   media="(min-width:768px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
-                  <source
+                />
+                <source
                   srcset="./images/repina-mobile-opt@1x.jpg 1x, ./images/repina-mobile-opt@2x.jpg 2x"
                   media="(max-width:767px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
                 <img src="./images/repina-mobile-opt@1x.jpg" alt="Фото сотрудника" />
@@ -314,16 +312,16 @@
                 <source
                   srcset="./images/tarasov-desctop-opt@1x.jpg 1x, ./images/tarasov-desctop-opt@2x.jpg 2x"
                   media="(min-width:1200px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
-                <source srcset=" ./images/tarasov-tablet-opt@1x.jpg 1x, ./images/tarasov-tablet-opt@1x.jpg 2x"
-                media="(min-width:768px)" sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
-                type="image/
+                <source
+                  srcset="./images/tarasov-tablet-opt@1x.jpg 1x, ./images/tarasov-tablet-opt@1x.jpg 2x"
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
                 <source
                   srcset="./images/tarasov-mobile-opt@1x.jpg 1x, ./images/tarasov-mobile-opt@2x.jpg 2x"
                   media="(max-width:767px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
                 <img src="./images/tarasov-mobile-opt@1x.jpg" alt="Фото сотрудника" />
@@ -368,16 +366,16 @@
                 <source
                   srcset="./images/ermakov-desctop-opt@1x.jpg 1x, ./images/ermakov-desctop-opt@2x.jpg 2x"
                   media="(min-width:1200px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
-                <source srcset=" ./images/ermakov-tablet-opt@1x.jpg 1x, ./images/ermakov-tablet-opt@1x.jpg 2x"
-                media="(min-width:768px)" sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
-                type="image/
+                <source
+                  srcset="./images/ermakov-tablet-opt@1x.jpg 1x, ./images/ermakov-tablet-opt@1x.jpg 2x"
+                  media="(min-width:768px)"
+                  type="image/jpg"
+                />
                 <source
                   srcset="./images/ermakov-mobile-opt@1x.jpg 1x, ./images/ermakov-mobile-opt@2x.jpg 2x"
                   media="(max-width:767px)"
-                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, 450px"
                   type="image/jpg"
                 />
                 <img src="./images/ermakov-mobile-opt@1x.jpg" alt="Фото сотрудника" />
