--- a/portfolio.html
+++ b/portfolio.html
@@ -75,24 +75,21 @@
               <div class="filter-image">
                 <picture>
                   <source
-                    srcset="./images/project-1desctop-opt@1x.jpg, ./images/project-1desktop-opt@2x.jpg"
+                    srcset="./images/project-1desctop-opt@1x.jpg 1x, ./images/project-1desktop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
-                    srcset="./images/project-1tablet-opt@1x.jpg, ./images/project-1tablet-opt@2x.jpg"
+                    srcset="./images/project-1tablet-opt@1x.jpg 1x, ./images/project-1tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
-                    srcset="./images/project-1mobile-opt@1x.jpg, ./images/project-1mobile-opt@2x.jpg"
+                    srcset="./images/project-1mobile-opt@1x.jpg 1x, ./images/project-1mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-1desctop-opt@1x.jpg" alt="проект 1" />
+                  <img src="./images/project-1mobile-opt@1x.jpg" alt="проект 1" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -114,23 +111,20 @@
                   <source
                     srcset="./images/project-2desctop-opt@1x.jpg 1x, ./images/project-2desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-2tablet-opt@1x.jpg 1x, ./images/project-2tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
 
                   <source
                     srcset="./images/project-2mobile-opt@1x.jpg 1x, ./images/project-2mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-2-desctop-opt@1x.jpg" alt="проект 2" />
+                  <img src="./images/project-2mobile-opt@1x.jpg" alt="проект 2" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -152,23 +146,20 @@
                   <source
                     srcset="./images/project-3desctop-opt@1x.jpg 1x, ./images/project-3desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-3tablet-opt@1x.jpg 1x, ./images/project-3tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
 
                   <source
                     srcset="./images/project-3mobile-opt@1x.jpg 1x, ./images/project-3mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-3desctop-opt@1x.jpg" alt="проект 3" />
+                  <img src="./images/project-3mobile-opt@1x.jpg" alt="проект 3" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -190,23 +181,20 @@
                   <source
                     srcset="./images/project-4desctop-opt@1x.jpg 1x, ./images/project-4desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-4tablet-opt@1x.jpg 1x, ./images/project-4tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
 
                   <source
                     srcset="./images/project-4mobile-opt@1x.jpg 1x, ./images/project-4mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-4desctop-opt@1x.jpg" alt="проект 4" />
+                  <img src="./images/project-4mobile-opt@1x.jpg" alt="проект 4" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -228,22 +216,19 @@
                   <source
                     srcset="./images/project-5desctop-opt@1x.jpg 1x, ./images/project-5desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-5tablet-opt@1x.jpg 1x, ./images/project-5tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-5mobile-opt@1x.jpg 1x, ./images/project-5mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-5desctop-opt@1x.jpg" alt="проект 5" />
+                  <img src="./images/project-5mobile-opt@1x.jpg" alt="проект 5" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -265,23 +250,20 @@
                   <source
                     srcset="./images/project-6desctop-opt@1x.jpg 1x, ./images/project-6desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-6tablet-opt@1x.jpg 1x, ./images/project-6tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
 
                   <source
                     srcset="./images/project-6mobile-opt@1x.jpg 1x, ./images/project-6mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-6desctop-opt@1x.jpg" alt="проект 6" />
+                  <img src="./images/project-6mobile-opt@1x.jpg" alt="проект 6" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -303,23 +285,20 @@
                   <source
                     srcset="./images/project-7desctop-opt@1x.jpg 1x, ./images/project-7desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-7tablet-opt@1x.jpg 1x, ./images/project-7tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
 
                   <source
                     srcset="./images/project-7mobile-opt@1x.jpg 1x, ./images/project-7mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-7desctop-opt@1x.jpg" alt="проект 7" />
+                  <img src="./images/project-7mobile-opt@1x.jpg" alt="проект 7" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -341,23 +320,19 @@
                   <source
                     srcset="./images/project-8desctop-opt@1x.jpg 1x, ./images/project-8desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-8tablet-opt@1x.jpg 1x, ./images/project-8tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-
                   <source
                     srcset="./images/project-8mobile-opt@1x.jpg 1x, ./images/project-8mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-8desctop-opt@1x.jpg" alt="проект 8" />
+                  <img src="./images/project-8mobile-opt@1x.jpg" alt="проект 8" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
@@ -379,23 +354,19 @@
                   <source
                     srcset="./images/project-9desctop-opt@1x.jpg 1x, ./images/project-9desctop-opt@2x.jpg 2x"
                     media="(min-width:1200px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
                   <source
                     srcset="./images/project-9tablet-opt@1x.jpg 1x, ./images/project-9tablet-opt@2x.jpg 2x"
                     media="(min-width:768px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-
                   <source
                     srcset="./images/project-9mobile-opt@1x.jpg 1x, ./images/project-9mobile-opt@2x.jpg 2x"
                     media="(max-width:767px)"
-                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, 450px"
                     type="image/jpg"
                   />
-                  <img src="./images/project-9desctop-opt@1x.jpg" alt="проект 9" />
+                  <img src="./images/project-9mobile-opt@1x.jpg" alt="проект 9" />
                 </picture>
                 <div class="overlay">
                   <p class="overlay-description">
